--- a/sections/tow-images-with-content.liquid
+++ b/sections/tow-images-with-content.liquid
@@ -5,35 +5,40 @@
     <div class="presentation__wrap">
         <div class="presentation__col_pic js-fade-el">
             <div class="presentation__pic_wrap">
-                {%- if section.settings.image_1 != blank -%}
-                    <picture class="presentation__pic presentation__pic--v1_mod">
-                        <img src="{{ section.settings.image_1 | img_url: 'master' }}" alt="office chair" class="presentation__img">
-                    </picture>
-                {%- else -%}
-                    {{ 'detailed-apparel-1' | placeholder_svg_tag: 'placeholder-svg' }}
-                {%- endif -%}
+                <picture class="presentation__pic presentation__pic--v1_mod">
+                    {%- if section.settings.image_1 != blank -%}
+                            <img src="{{ section.settings.image_1 | img_url: 'master' }}" alt="office chair" class="presentation__img">
+                    {%- else -%}
+                        {{ 'detailed-apparel-1' | placeholder_svg_tag: 'placeholder-svg' }}
+                    {%- endif -%}
+                </picture>
 
-                {%- if section.settings.image_2 != blank -%}
-                    <picture class="presentation__pic presentation__pic--v2_mod">
-                        <img src="{{ section.settings.image_2 | img_url: 'master' }}" alt="office chair" class="presentation__img">
-                    </picture>
-                {%- else -%}
-                    {{ 'detailed-apparel-1' | placeholder_svg_tag: 'placeholder-svg' }}
-                {%- endif -%}
+                <picture class="presentation__pic presentation__pic--v2_mod">
+                    {%- if section.settings.image_2 != blank -%}
+                            <img src="{{ section.settings.image_2 | img_url: 'master' }}" alt="office chair" class="presentation__img">
+                    {%- else -%}
+                        {{ 'detailed-apparel-1' | placeholder_svg_tag: 'placeholder-svg' }}
+                    {%- endif -%}
+                </picture>
 
             </div>
         </div>
         <div class="presentation__col_content js-fade-el">
             <div class="presentation__content">
-                <div class="presentation__description">Hier vindt u alles voor uw kantoor</div>
-                <a href="#" class="presentation__link">
-                    Meer ontdekken
-                    <span class="presentation__link_icon">
+                {%- if section.settings.text_description != blank -%}
+                    <div class="presentation__description">{{ section.settings.text_description }}</div>
+                {% endif %}
+
+                {% if section.settings.button_link != blank %}
+                    <a href="{{ section.settings.button_link }}" class="presentation__link">
+                        {{ section.settings.button_label | escape }}
+                        <span class="presentation__link_icon">
                         <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M6 26L26 6M26 6H11M26 6V21" stroke="#2C2929" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </span>
-                </a>
+                    </a>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -63,6 +68,23 @@
             "type": "image_picker",
             "id": "image_2",
             "label": "Image 2"
+        },
+        {
+            "type": "inline_richtext",
+            "id": "text_description",
+            "default": "Hier vindt u alles voor uw kantoor",
+            "label": "Text"
+        },
+        {
+            "type": "url",
+            "id": "button_link",
+            "label": "Button link"
+        },
+        {
+            "type": "text",
+            "id": "button_label",
+            "default": "Meer ontdekken ",
+            "label": "Button label"
         }
     ],
 
