init featured product

--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -1,4 +1,8 @@
 {{ 'featured-product.css' | asset_url | stylesheet_tag }}
+{{ 'fancybox.css' | asset_url | stylesheet_tag }}
+{{ 'swiper-bundle.css' | asset_url | stylesheet_tag }}
+{{ 'fancybox.js' | asset_url | script_tag }}
+{{ 'swiper.js' | asset_url | script_tag }}
 
 <div class="product__container">
     <div class="breadcrumbs js-anim-breadcrumbs">
