init featured product

--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="product__col_content">
-            <h1 class="product__title js-fade-el">Elektrisch zit-sta bureau Fuse</h1>
+            <h1 class="product__title js-fade-el">{{ section.settings.title }}</h1>
             <div class="product__description js-fade-el js-hidden-text-container">
                 <div data-max-text="150" data-ellipse-disable="true" class="product__description_text js-hidden-text">
                     <p>Ontgrendel ergonomische uitmuntendheid en verhoog je efficiëntie met onze zit-sta bureau oplossing!</p>
@@ -317,6 +317,7 @@
             {
         "type": "inline_richtext",
         "id": "title",
+        "default": "Product title",
         "label": "Title"
         }
     ],
