init featured product

--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -3,6 +3,7 @@
 {{ 'swiper-bundle.css' | asset_url | stylesheet_tag }}
 {{ 'fancybox.js' | asset_url | script_tag }}
 {{ 'swiper.js' | asset_url | script_tag }}
+{{ 'featured-product-slider.js' | asset_url | script_tag }}
 
 <div class="product__container">
     <div class="breadcrumbs js-anim-breadcrumbs">
