--- a/sections/featured-product-custom.liquid
+++ b/sections/featured-product-custom.liquid
@@ -275,6 +275,10 @@
     </div>
 </div>
 
+{% javascript %}
+    console.log(product.featured_image);
+{% endjavascript %}
+
 <script>
     const slider = () => {
         const SELECTORS = {
